--- a/views/layouts/recipes.hbs
+++ b/views/layouts/recipes.hbs
@@ -20,7 +20,10 @@
                 <h4 class="modal-title">Filters</h4>
             </div>
             <div class="modal-body">
-                <p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p>
+                <p><a href="/">No filters</a></p>
+                <p><a href="/?filter=sugar">Filter sugar</a></p>
+                <p>Test filter</p>
+                <p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p><p>Test filter</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default">Apply Filter</button>
