--- a/views/partials/search-recipe.hbs
+++ b/views/partials/search-recipe.hbs
@@ -18,23 +18,30 @@
     </ul>
 </div>
 -->
-<a href="/recipe/{{_id}}">
-    <div class="grid-item tile">
-        <div class="tile-background">
-            <div class="image-overlay-top"><h5>{{name}}</h5></div>
-            <img class="img-responsive" src="{{imageUrl}}" />
-            <div class="tile-desc">
-                <p>Description of the soup goes here, yada yada yada, this is going to be capped at a certain amount of characters which I haven't decided on yet.</p>
+<div class="grid-item tile">
+    <div class="tile-background">
+        <a href="/recipe/{{_id}}">
+            <div class="image-overlay-top">
+                <h5>{{name}}</h5>
             </div>
-            <div class="tile-footer">
-                <div class="heart-total">
-                    <span class="glyphicon glyphicon-heart"></span><span>112</span>
-                </div>
-                <input type="checkbox" class="hidden" id="like-{{_id}}">
-                <label for="like-{{_id}}" class="button-like">
+            <img class="img-responsive" src="{{imageUrl}}" />
+        </a>
+        <div class="tile-desc">
+            <h3>Contains:</h3>
+            <ul>
+                {{#each ingredients}}
+                <li>{{name}}</li>
+                {{/each}}
+            </ul>
+        </div>
+        <div class="tile-footer">
+            <div class="heart-total">
+                <span class="glyphicon glyphicon-heart"></span><span>112</span>
+            </div>
+            <input type="checkbox" class="hidden" id="like-{{_id}}">
+            <label for="like-{{_id}}" class="button-like">
                     <span class="glyphicon glyphicon-heart"></span>
                 </label>
-            </div>
         </div>
     </div>
-</a>
+</div>
